[package]
name = "pblib-rs"
authors = ["Emmanuel Lonca <lonca@cril.fr>"]
license = "LGPL-3.0-or-later"
version = "0.1.0"
description = "Rust safe bindings for pblib"
categories = ["api-bindings", "encoding", "mathematics", "science"]
keywords = ["cardinality", "PB", "constraints", "encoding", "SAT"]
repository = "https://github.com/crillab/pblib-rs"
edition = "2021"
build = "build.rs"
links = "libcpblib.a"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
splr = { version = "0.17.1", features = ["incremental_solver"] }
